welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: '<-' expected but '=' found.
  for ( i=0; i < (nums.length-1); i++) {
         ^array667:4: error: illegal start of simple expression
  for ( i=0; i < (nums.length-1); i++) {
           ^array667:4: error: '<-' expected but ';' found.
  for ( i=0; i < (nums.length-1); i++) {
                                ^array667:4: error: illegal start of simple pattern
  for ( i=0; i < (nums.length-1); i++) {
                                     ^array667:12: error: illegal start of simple expression
} 
^