welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
var count = 0;
 
  for ( i=0; i < (nums.length-1); i++) {
    if (nums[i] == 6) {
      if (nums[i+1] == 6 || nums[i+1] == 7) {
        count++;
      }
    }
  }
  return count;
}